--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Flask-SQLAlchemy==2.5.1
 Flask-Uploads==0.2.1
 Flask-WTF==1.0.1
 greenlet==1.1.2
+gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.11.3
 itsdangerous==1.1.0
@@ -23,6 +24,6 @@ MarkupSafe==2.0.1
 psycopg2-binary==2.9.3
 SQLAlchemy==1.4.36
 visitor==0.1.3
-Werkzeug==0.16.0
+Werkzeug==1.0.1
 WTForms==3.0.1
 zipp==3.8.0
